# cmake_test

./: .gitignore  CMakeLists.txt  README.MD
factors/: 00001-09999.txt  10000-19999.txt  20000-29999.txt
factors-prime/: 00001-09999.txt  10000-19999.txt  20000-29999.txt
lib/: CMakeLists.txt  math_func.cpp  math_num.cpp  math_num.hpp
src/: CMakeLists.txt  main.cpp  math_func.cpp  math_func.hpp
src/lib/: CMakeLists.txt  math_func.hpp
